fix(ossh-01): deal with SonarLint issues, tweak tests, and general cleanup